--- a/css/styles.css
+++ b/css/styles.css
@@ -263,9 +263,11 @@ shadow{box-shadow:0 1px 3px rgba(0,0,0,0.12),0 1px 2px rgba(0,0,0,0.24)}
 
 #skills ul{display:block;margin:0 auto;padding:0;max-width:800px}
 
+.icons{display:inline-block;font-size:3em;cursor:default;}
 
-#skills li{display:inline-block;margin:7px;padding:5px 10px;color:#374054;background:#e4e4ea;list-style:none;cursor:default;font-size:1.2em}
-
+.skills{display:inline-block;margin:7px;padding:5px 10px;color:#374054;background:#e4e4ea;list-style:none;cursor:default;font-size:1.2em}
+/* #skills li{display:inline-block;margin:7px;padding:5px 10px;color:#374054;background:#e4e4ea;list-style:none;cursor:default;font-size:1.2em} */
+/* #ski */
 
 #contact{padding:50px 15px;background:#3498db;text-align:center}
 
